--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.segurosx.projectx</groupId>
-  <artifactId>projectx</artifactId>
+  <groupId>com.segurosx</groupId>
+  <artifactId>segurosx</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>projectx</name>
+  <name>segurosx</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
